tests/expectations/compiler/statements/unknown_type_in_definition_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372017]: The type `Foo` is not found in the current scope.
    --> compiler-test:5:6
     |
   5 |     \tlet b: Foo = 1u8;
     |      ^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372003]: Expected type `Foo` but type `u8` was found
    --> compiler-test:5:19
     |
   5 |     \tlet b: Foo = 1u8;
     |                   ^^^
"""]
